fix bug interpoalted image not showing

--- a/frontend/src/stylesheets/Sidebar.scss
+++ b/frontend/src/stylesheets/Sidebar.scss
@@ -41,7 +41,7 @@
       }
 
       .image-preview {
-        img {
+        .preview-thumbnail {
           width: 20vw;
           height: 20vw;
         }
